--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3003
 DB_CONNECTION = mongodb+srv://ardialghifari:jgA5nzZ0dqcairuO@cluster0.h6ri3iz.mongodb.net/restoran?retryWrites=true&w=majority
+SECRET_KEY = 1nformatika
